--- a/index.html
+++ b/index.html
@@ -184,24 +184,154 @@
       </div>
     </section>
 
-    <footer>
-      <div class="container footer-content">
-        <div class="footer-wrapper">
-          <div>
-            <a href="#" class="logo footer-logo">AlgoDesign<span>.</span></a>
-            <p class="footer-desc">
-              Surabaya, Indonesia.<br />
-              Est. 2026
-            </p>
-          </div>
-          <div class="footer-social">
-            <p class="mono">CONNECT</p>
-            <div class="social-icons">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
-              <a href="#"><i class="fab fa-dribbble"></i></a>
+    <section id="testimonials" class="container section-gap">
+      <div class="section-header reveal">
+        <h2 class="section-title">Client Logs</h2>
+        <span class="mono">// VERIFIED FEEDBACK</span>
+      </div>
+
+      <div class="testimonial-grid">
+        <div class="testimonial-item reveal">
+          <div class="t-meta">
+            <span class="mono t-id">ID: #TRADER_01</span>
+            <div class="t-stars">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
             </div>
           </div>
+          <p class="t-text">
+            "AlgoDesign mengubah dashboard trading kami yang berantakan menjadi
+            instrumen presisi. Latency visual berkurang drastis, eksekusi order
+            jadi lebih cepat."
+          </p>
+          <div class="t-author">
+            <h4 class="t-name">Sarah Chen</h4>
+            <span class="mono t-role">CTO, QuantFlux Capital</span>
+          </div>
+        </div>
+
+        <div class="testimonial-item reveal">
+          <div class="t-meta">
+            <span class="mono t-id">ID: #DEFI_L2</span>
+            <div class="t-stars">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+            </div>
+          </div>
+          <p class="t-text">
+            "User experience di protokol DeFi kami meningkat 200% setelah
+            redesign. User akhirnya paham cara staking tanpa perlu baca
+            dokumentasi 50 halaman."
+          </p>
+          <div class="t-author">
+            <h4 class="t-name">Marcus Velorn</h4>
+            <span class="mono t-role">Founder, Nexus Protocol</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="faq" class="container section-gap">
+      <div class="section-header reveal">
+        <h2 class="section-title">System Protocols</h2>
+        <span class="mono">// FAQ DATABASE</span>
+      </div>
+
+      <div class="faq-container reveal">
+        <div class="faq-item">
+          <div class="faq-question">
+            <h3>Apakah desain sudah termasuk koding (Frontend)?</h3>
+            <i class="fas fa-plus faq-icon"></i>
+          </div>
+          <div class="faq-answer">
+            <p>
+              Paket standar kami berfokus pada UI/UX (Figma). Namun, untuk paket
+              Enterprise, kami menyediakan layanan *Developer Handoff* lengkap
+              atau bisa menyertakan implementasi Frontend (React/Vue) dengan
+              biaya tambahan.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <div class="faq-question">
+            <h3>Berapa lama estimasi pengerjaan?</h3>
+            <i class="fas fa-plus faq-icon"></i>
+          </div>
+          <div class="faq-answer">
+            <p>
+              Untuk MVP (3-5 screen) biasanya memakan waktu 3-5 hari kerja.
+              Untuk platform trading lengkap (20+ screen) bisa memakan waktu 2-4
+              minggu tergantung kompleksitas fitur.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <div class="faq-question">
+            <h3>Apakah data strategi trading saya aman?</h3>
+            <i class="fas fa-plus faq-icon"></i>
+          </div>
+          <div class="faq-answer">
+            <p>
+              Sangat aman. Kami bersedia menandatangani NDA (Non-Disclosure
+              Agreement) sebelum proyek dimulai untuk menjamin kerahasiaan
+              algoritma dan strategi bisnis Anda.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer id="contact">
+      <div class="container">
+        <div class="footer-top">
+          <div class="footer-brand">
+            <a href="#" class="logo footer-logo">AlgoDesign<span>.</span></a>
+            <p class="footer-tagline">Precision UI for the financial web.</p>
+            <div class="system-status">
+              <span class="status-dot"></span>
+              <span class="mono">SYSTEM: OPERATIONAL</span>
+            </div>
+          </div>
+
+          <div class="footer-links-grid">
+            <div class="footer-col">
+              <h4 class="mono">SITEMAP</h4>
+              <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Works</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#faq">FAQ</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4 class="mono">LEGAL</h4>
+              <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">NDA Request</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4 class="mono">CONNECT</h4>
+              <ul>
+                <li><a href="#">Twitter / X</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">GitHub</a></li>
+                <li>
+                  <a href="mailto:hello@algodesign.id">hello@algodesign.id</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <p class="mono">&copy; 2026 AlgoDesign Studio. Surabaya, ID.</p>
+          <p class="mono">V.1.0.2 [BETA]</p>
         </div>
       </div>
     </footer>
