Fix: Repair HTML structure in Portfolio section and finalize layout

--- a/index.html
+++ b/index.html
@@ -112,18 +112,25 @@
       <div class="portfolio-grid">
         <div class="portfolio-item reveal">
           <span class="mono tag">EXCHANGE UI</span>
-          <div class="p-img-placeholder">
-            <i class="fas fa-chart-area fa-3x"></i>
+          <div class="p-img-placeholder browser-mockup">
+            <div class="browser-dots">
+              <span></span><span></span><span></span>
+            </div>
+            <img src="img/portofolio1.png" alt="Binance Pro Redesign" />
           </div>
           <div class="p-header">
             <h3>Binance Pro Redesign</h3>
             <i class="fas fa-arrow-right arrow-icon"></i>
           </div>
         </div>
+
         <div class="portfolio-item reveal">
           <span class="mono tag">DASHBOARD</span>
-          <div class="p-img-placeholder">
-            <i class="fas fa-robot fa-3x"></i>
+          <div class="p-img-placeholder browser-mockup">
+            <div class="browser-dots">
+              <span></span><span></span><span></span>
+            </div>
+            <img src="img/portofolio2.png" alt="QuantBot Admin" />
           </div>
           <div class="p-header">
             <h3>QuantBot Admin</h3>
@@ -201,12 +208,12 @@
             </div>
           </div>
           <p class="t-text">
-            "AlgoDesign mengubah dashboard trading kami yang berantakan menjadi
-            instrumen presisi. Latency visual berkurang drastis, eksekusi order
-            jadi lebih cepat."
+            "AlgoDesign transformed our cluttered trading dashboard into a
+            precision instrument. Visual latency dropped significantly, and
+            order execution feels much faster."
           </p>
           <div class="t-author">
-            <h4 class="t-name">Sarah Chen</h4>
+            <h4 class="t-name">Dimas Radjata</h4>
             <span class="mono t-role">CTO, QuantFlux Capital</span>
           </div>
         </div>
@@ -221,12 +228,12 @@
             </div>
           </div>
           <p class="t-text">
-            "User experience di protokol DeFi kami meningkat 200% setelah
-            redesign. User akhirnya paham cara staking tanpa perlu baca
-            dokumentasi 50 halaman."
+            "User experience on our DeFi protocol increased by 200% after the
+            redesign. Users finally understand how to stake without reading 50
+            pages of documentation."
           </p>
           <div class="t-author">
-            <h4 class="t-name">Marcus Velorn</h4>
+            <h4 class="t-name">Kitagawa Marin</h4>
             <span class="mono t-role">Founder, Nexus Protocol</span>
           </div>
         </div>
@@ -242,43 +249,43 @@
       <div class="faq-container reveal">
         <div class="faq-item">
           <div class="faq-question">
-            <h3>Apakah desain sudah termasuk koding (Frontend)?</h3>
+            <h3>Does the design include Frontend Coding?</h3>
             <i class="fas fa-plus faq-icon"></i>
           </div>
           <div class="faq-answer">
             <p>
-              Paket standar kami berfokus pada UI/UX (Figma). Namun, untuk paket
-              Enterprise, kami menyediakan layanan *Developer Handoff* lengkap
-              atau bisa menyertakan implementasi Frontend (React/Vue) dengan
-              biaya tambahan.
+              Our Standard and Pro packages focus on UI/UX Design (Figma files).
+              However, for the Enterprise plan, we provide full *Developer
+              Handoff* documentation or can include React/Vue implementation for
+              an additional fee.
             </p>
           </div>
         </div>
 
         <div class="faq-item">
           <div class="faq-question">
-            <h3>Berapa lama estimasi pengerjaan?</h3>
+            <h3>What is the estimated turnaround time?</h3>
             <i class="fas fa-plus faq-icon"></i>
           </div>
           <div class="faq-answer">
             <p>
-              Untuk MVP (3-5 screen) biasanya memakan waktu 3-5 hari kerja.
-              Untuk platform trading lengkap (20+ screen) bisa memakan waktu 2-4
-              minggu tergantung kompleksitas fitur.
+              For MVP projects (3-5 screens), it typically takes 3-5 business
+              days. For full trading platforms (20+ screens), it may take 2-4
+              weeks depending on the complexity of the features.
             </p>
           </div>
         </div>
 
         <div class="faq-item">
           <div class="faq-question">
-            <h3>Apakah data strategi trading saya aman?</h3>
+            <h3>Is my trading strategy data secure?</h3>
             <i class="fas fa-plus faq-icon"></i>
           </div>
           <div class="faq-answer">
             <p>
-              Sangat aman. Kami bersedia menandatangani NDA (Non-Disclosure
-              Agreement) sebelum proyek dimulai untuk menjamin kerahasiaan
-              algoritma dan strategi bisnis Anda.
+              Strictly confidential. We are ready to sign an NDA (Non-Disclosure
+              Agreement) before the project begins to guarantee the safety of
+              your algorithms and business strategies.
             </p>
           </div>
         </div>
@@ -317,12 +324,20 @@
             </div>
             <div class="footer-col">
               <h4 class="mono">CONNECT</h4>
-              <ul>
-                <li><a href="#">Twitter / X</a></li>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">GitHub</a></li>
+              <ul class="social-links-list">
                 <li>
-                  <a href="mailto:hello@algodesign.id">hello@algodesign.id</a>
+                  <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                </li>
+                <li>
+                  <a href="mailto:hello@algodesign.id"
+                    ><i class="fas fa-envelope"></i> hello@algodesign.id</a
+                  >
                 </li>
               </ul>
             </div>
