Feat: Add Order Page with Invoice, Upload Validation, and Toast Notifications

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
   </head>
   <body>
     <header id="navbar">
@@ -25,7 +26,7 @@
           <a href="#portfolio" class="mono">02 Work</a>
           <a href="#pricing" class="mono">03 Plans</a>
         </nav>
-        <a href="#contact" class="btn-cta">START PROJECT</a>
+        <a href="order.html" class="btn-cta">START PROJECT</a>
       </div>
     </header>
 
@@ -158,7 +159,11 @@
             <li><i class="fas fa-check"></i> Figma Source</li>
             <li><i class="fas fa-check"></i> Basic Prototype</li>
           </ul>
-          <a href="#" class="btn-cta btn-secondary center-text">SELECT</a>
+          <a
+            href="order.html?plan=starter"
+            class="btn-cta btn-secondary center-text"
+            >SELECT</a
+          >
         </div>
 
         <div class="price-item featured reveal">
@@ -172,7 +177,9 @@
             <li><i class="fas fa-check"></i> Design System</li>
             <li><i class="fas fa-check"></i> Interactive Proto</li>
           </ul>
-          <a href="#" class="btn-cta center-text">SELECT</a>
+          <a href="order.html?plan=professional" class="btn-cta center-text"
+            >SELECT</a
+          >
         </div>
 
         <div class="price-item reveal">
@@ -186,7 +193,11 @@
             <li><i class="fas fa-check"></i> Dev Handoff</li>
             <li><i class="fas fa-check"></i> Priority Support</li>
           </ul>
-          <a href="#" class="btn-cta btn-secondary center-text">CONTACT</a>
+          <a
+            href="order.html?plan=enterprise"
+            class="btn-cta btn-secondary center-text"
+            >CONTACT</a
+          >
         </div>
       </div>
     </section>
