--- a/order.html
+++ b/order.html
@@ -16,6 +16,29 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="img/favicon.png" />
+
+    <style>
+      /* Styling Toast Notification */
+      #toast-container {
+        position: fixed;
+        top: 100px;
+        right: 20px;
+        z-index: 99999;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      @media (max-width: 600px) {
+        #toast-container {
+          top: auto;
+          bottom: 30px;
+          right: 50%;
+          transform: translateX(50%);
+          width: 90%;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="toast-container"></div>
@@ -222,7 +245,7 @@
     </div>
 
     <script>
-      // --- SISTEM NOTIFIKASI TOAST (CUSTOM) ---
+      // --- 1. SISTEM NOTIFIKASI TOAST ---
       function showToast(title, message, type = "success") {
         const container = document.getElementById("toast-container");
 
@@ -243,19 +266,25 @@
 
         container.appendChild(toast);
 
+        // Animasi Masuk
         setTimeout(() => {
           toast.classList.add("show");
         }, 10);
 
+        // Hapus otomatis setelah 5 detik
         setTimeout(() => {
           toast.classList.remove("show");
           setTimeout(() => toast.remove(), 400);
-        }, 4000);
+        }, 5000);
       }
 
-      // --- LOGIKA UTAMA ---
+      // --- 2. LOGIKA HALAMAN UTAMA ---
 
       window.addEventListener("DOMContentLoaded", () => {
+        setTimeout(() => {
+          document.body.classList.add("loaded");
+        }, 100);
+
         const urlParams = new URLSearchParams(window.location.search);
         const plan = urlParams.get("plan");
         if (plan) {
@@ -263,7 +292,6 @@
           select.value = plan;
         }
 
-        // Listener Upload File (Visual Feedback)
         const fileInput = document.getElementById("payment-proof");
         const uploadText = document.getElementById("upload-content-text");
         const dropArea = document.getElementById("drop-area");
@@ -283,7 +311,7 @@
         });
       });
 
-      // UPDATE: VALIDASI TANGGAL WAJIB DIISI
+      // --- 3. NAVIGASI STEP 1 -> STEP 2 ---
       function goToStep2() {
         const name = document.getElementById("name").value;
         const email = document.getElementById("email").value;
@@ -292,7 +320,9 @@
         const pkg = document.getElementById("package");
         const pkgText = pkg.options[pkg.selectedIndex].text;
 
-        // Validasi: Cek apakah nama, email, hp, atau TANGGAL kosong
+        // Auto scroll ke atas kalau ada error di Step 1
+        window.scrollTo({ top: 0, behavior: "smooth" });
+
         if (!name || !email || !phone || !date) {
           showToast(
             "Form Incomplete",
@@ -305,7 +335,7 @@
         document.getElementById("sum-name").innerText = name;
         document.getElementById("sum-email").innerText = email;
         document.getElementById("sum-phone").innerText = phone;
-        document.getElementById("sum-date").innerText = date; // Tidak perlu fallback karena wajib
+        document.getElementById("sum-date").innerText = date;
 
         const splitPkg = pkgText.split(" - ");
         document.getElementById("sum-package").innerText = splitPkg[0];
@@ -321,8 +351,6 @@
         setTimeout(() => {
           step2.style.opacity = "1";
         }, 50);
-
-        window.scrollTo({ top: 0, behavior: "smooth" });
       }
 
       function backToStep1() {
@@ -339,32 +367,91 @@
         window.scrollTo({ top: 0, behavior: "smooth" });
       }
 
+      // --- 4. FINISH ORDER (UPDATED: Auto Scroll & Faster Timer) ---
       function finishOrder() {
         const fileInput = document.getElementById("payment-proof");
-        if (fileInput.files.length === 0) {
-          showToast(
-            "Proof Missing",
-            "Please upload payment proof to continue.",
-            "error"
-          );
 
+        // A. Validasi File Upload (Kosong)
+        if (fileInput.files.length === 0) {
+          window.scrollTo({ top: 0, behavior: "smooth" }); // Scroll biar notif keliatan
+          showToast("Proof Missing", "Please upload payment proof.", "error");
           const dropArea = document.getElementById("drop-area");
           dropArea.style.borderColor = "#FF4444";
           dropArea.style.background = "rgba(255, 68, 68, 0.05)";
 
-          fileInput.scrollIntoView({ behavior: "smooth", block: "center" });
+          setTimeout(() => {
+            fileInput.scrollIntoView({ behavior: "smooth", block: "center" });
+          }, 1000);
           return;
         }
 
-        showToast(
-          "Payment Confirmed",
-          "Order details received. Redirecting...",
-          "success"
-        );
+        const file = fileInput.files[0];
 
-        setTimeout(() => {
-          window.location.href = "index.html";
-        }, 3000);
+        // B. Validasi File Size (Terlalu Besar)
+        if (file.size > 1024 * 1024) {
+          // PERBAIKAN: Otomatis scroll ke atas agar notif error terlihat
+          window.scrollTo({ top: 0, behavior: "smooth" });
+          showToast(
+            "File Too Large",
+            "Please upload image under 1MB.",
+            "error"
+          );
+          return;
+        }
+
+        const reader = new FileReader();
+
+        reader.onload = function (event) {
+          const base64String = event.target.result;
+
+          const newOrder = {
+            id: "#ORD-" + Math.floor(Math.random() * 10000),
+            name: document.getElementById("name").value,
+            email: document.getElementById("email").value,
+            phone: document.getElementById("phone").value,
+            brief: document.getElementById("brief").value,
+            meetingDate: document.getElementById("date").value,
+            package: document.getElementById("sum-package").innerText,
+            amount: document.getElementById("sum-total").innerText,
+            submitDate: new Date().toLocaleDateString("id-ID", {
+              day: "numeric",
+              month: "short",
+              year: "numeric",
+            }),
+            status: "Pending Verification",
+            proof: base64String,
+            fileName: file.name,
+          };
+
+          try {
+            let orders = JSON.parse(localStorage.getItem("algoOrders")) || [];
+            orders.push(newOrder);
+            localStorage.setItem("algoOrders", JSON.stringify(orders));
+
+            // Sukses
+            window.scrollTo({ top: 0, behavior: "smooth" });
+            showToast(
+              "Success!",
+              "Payment proof received. Redirecting...",
+              "success"
+            );
+
+            document.body.classList.remove("loaded");
+            document.body.classList.add("exiting");
+
+            // PERBAIKAN: Durasi Redirect jadi 3 Detik (lebih cepat dari 5s)
+            setTimeout(() => {
+              window.location.href = "index.html";
+            }, 3000);
+          } catch (e) {
+            alert(
+              "Storage Full! Please clear admin data or upload smaller image."
+            );
+            console.error(e);
+          }
+        };
+
+        reader.readAsDataURL(file);
       }
 
       function copyText(text) {
